# anon-bench-123

./: .gitignore  LICENSE-CODE  README.md
evals/: pyproject.toml
evals/batch-inference/: .gitignore  README.md  azure_gcp_inference_local_fallback.py  bedrock_inference_local_fallback.py  convert_to_eee.sh  create_batch_inference_job.sh  fetch_azure_gcp_inference_output.py  fetch_bedrock_batch_inference_output.sh  fix_inspect_log.py  pyproject.toml  replay_eval.py  replay_eval_combine_epoch.py  scorer_model_batch_inference_input.py  send_sqs_messages.py  solver_model_batch_inference_input.py  stability_analysis.ipynb
evals/batch-inference/inference-lambda/: .env.local.example  .gitignore  README.md  invoke_local.sh  samconfig.toml  template.yaml
evals/batch-inference/inference-lambda/events/: event.json
evals/batch-inference/inference-lambda/run_inference/: app.py  requirements.txt
evals/batch-inference/inference-lambda/statemachine/: inference.asl.json
evals/src/elt_bench_eval/: __init__.py  bedrock_patch.py  criteria.py  dataset.py  eval.py  run.py  score.py  task.py
evals/src/elt_bench_eval/prompts/: prompt_getter.py  retry.py
evals/src/elt_bench_eval/prompts/v1/: judge_prompt.py
evals/src/elt_bench_eval/prompts/v2/: judge_prompt.py
evals/src/elt_bench_eval/prompts/v3/: judge_prompt.py
evals/src/elt_bench_eval/prompts/v4/: judge_prompt.py
resources_for_tasks/: class_attendance_tracking.csv  class_participation_scores.csv  comparing_prompts_a2.md  course_progress_summary.csv  data_b2first_practice_athens.csv  data_bac_mocks_paris.csv  (+311 more)
